--- a/2022teambattingstats.html
+++ b/2022teambattingstats.html
@@ -563,62 +563,6 @@
 <br>
 
 
-<h3><strong>Jeter Downs</strong></h3>
-
-<table>
-  <tr>
-    <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/a/a9f038b3_mlbam.jpg" alt=""></td>
-    <td>
-
-
-
-<div class="sr_share_wrap" style="overflow:auto">
-<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-    <caption>Standard Batting</caption>
-   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-   <thead>
-      <tr>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-         <th scope="col" data-filter="1" data-name="Batting Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th>
-         <th scope="col" data-filter="1" data-name="On-Base%" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th>
-         <th scope="col" data-filter="1" data-name="Slugging %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th>
-         <th scope="col" data-filter="1" data-name="On-Base Plus Slugging" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GDP</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Pos</th>
-      </tr>
-      </thead>
-<tbody>
-<tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/BOS/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Boston Red Sox">BOS</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">14</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">41</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">39</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">21</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.154</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.171</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.256</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.427</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">17</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">10</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">/45H6D</td></tr>
-</tbody><tfoot>
-   </tfoot>
-</table><div id="credit_batting_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/d/downsje01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#batting_standard">View Original Table</a><br>Generated 12/19/2022.</div>
-
-</td>
-</tr>
-</table>
-
 
 <hr>
 <h2><strong><center>Third Basemen</center></strong></h2>
@@ -1027,6 +971,64 @@
 </table>
 <br>
 
+
+
+<h3><strong>Matt Vierling</strong></h3>
+
+<table>
+  <tr>
+    <td><img src="https://www.baseball-reference.com/req/202305180/images/headshots/f/fa203bae_mlbam.jpg" alt=""></td>
+    <td>
+
+
+
+<div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
+    <caption>Standard Batting</caption>
+   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
+   <thead>
+      <tr>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">PA</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">AB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">2B</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">3B</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">RBI</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
+         <th scope="col" data-filter="1" data-name="Batting Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BA</th>
+         <th scope="col" data-filter="1" data-name="On-Base%" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OBP</th>
+         <th scope="col" data-filter="1" data-name="Slugging %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SLG</th>
+         <th scope="col" data-filter="1" data-name="On-Base Plus Slugging" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">OPS+</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">TB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GDP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SH</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
+      </tr>
+      </thead>
+<tbody>
+<tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">25</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/PHI/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="Philadelphia Phillies">PHI</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">117</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">357</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">325</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">41</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">80</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">12</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">32</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">23</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">70</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.246</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.297</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.351</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.648</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">84</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">114</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td></tr>
+</tbody><tfoot>
+   </tfoot>
+</table><div id="credit_batting_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/v/vierlma01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#batting_standard">View Original Table</a><br>Generated 6/22/2023.</div>
+
+</td>
+</tr>
+</table>
+
+    
 
 <h3><strong>Tyrone Taylor</strong></h3>
 
