--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -26,6 +26,11 @@
   <table>
 
    <tr>
+      <td><em>6/22/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>2B Jeter Downs</strong> and the <strong>Middletown Legg Hounds 2024 4th round draft pick </strong> to the <u>Missouri Royals</u> in exchange for <strong>OF Matt Vierling </strong>. </td>
+    </tr>  
+    
+   <tr>
       <td><em>6/14/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Adam Ottavino</strong> to the <u>Middletown Legg Hounds</u> in exchange for <strong>P Diego Castillo </strong> and a <strong> 2024 4th round pick. </strong> </td>
     </tr>  
@@ -53,13 +58,13 @@
                                          
     <tr>
       <td><em>12/19/2022</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>SP Jacob deGrom</strong> and <strong>SP Patrick Corbin</strong> to the <u>Springfield Schnauzers</u> in exchange for <strong>2B Jonathan India</strong>, <strong>SP Aaron Ashby</strong>, and
-        <strong>SP Mitch Keller</strong>. </td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Jacob deGrom</strong> and <strong>P Patrick Corbin</strong> to the <u>Springfield Schnauzers</u> in exchange for <strong>2B Jonathan India</strong>, <strong>P Aaron Ashby</strong>, and
+        <strong>P Mitch Keller</strong>. </td>
     </tr>
 
     <tr>
       <td><em>12/06/2022</em></td>
-      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>Corey Dickerson</strong> to the <u>Little Compton Little Giants</u> in exchange for the <strong> 2023 9th & 11th round draft picks.</strong></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Corey Dickerson</strong> to the <u>Little Compton Little Giants</u> in exchange for the <strong> 2023 9th & 11th round draft picks.</strong></td>
     </tr>
 
     <tr>
