--- a/2022teampitchingstats.html
+++ b/2022teampitchingstats.html
@@ -275,63 +275,63 @@
     <br>
 
 
-    <h3><strong>Alex Cobb</strong></h3>
+    <h3><strong>Carlos Rodon</strong></h3>
 
 
     <table>
       <tr>
-        <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/9/92f8e737_mlbam.jpg" alt=""></td>
+        <td><img src="https://www.baseball-reference.com/req/202311010/images/headshots/5/54ae54d8_mlbam.jpg" alt=""></td>
         <td>
 
 
 
-          <div class="sr_share_wrap" style="overflow:auto">
-          <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
-              <caption>Standard Pitching</caption>
-             <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
-             <thead>
-                <tr>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
-                   <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
-                   <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
-                   <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
-                   <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
-                   <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
-                   <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
-                   <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
-                   <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
-                   <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
-                   <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
-                   <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
-                </tr>
-                </thead>
-          <tbody>
-          <tr><th scope="row" csk="2022" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2022</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">34</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/SFG/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="San Francisco Giants">SFG</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/NL/2022.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">NL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.467</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.73</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">149.2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">152</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">72</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">62</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">43</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">151</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">631</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">108</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.80</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.303</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.6</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.51</td></tr>
-          </tbody><tfoot>
-             </tfoot>
-          </table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/c/cobbal01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 12/20/2022.</div>
+       <div class="sr_share_wrap" style="overflow:auto">
+<table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
+    <caption>Standard Pitching</caption>
+   <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
+   <thead>
+      <tr>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Year</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Age</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Tm</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">Lg</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">L</th>
+         <th scope="col" data-filter="1" data-name="Win-Loss %" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">W-L%</th>
+         <th scope="col" data-filter="1" data-name="Earned Run Average" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">G</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GS</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">GF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">CG</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SHO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SV</th>
+         <th scope="col" data-filter="1" data-name="Innings Pitched" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">R</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ER</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">IBB</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HBP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BK</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WP</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BF</th>
+         <th scope="col" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">ERA+</th>
+         <th scope="col" data-filter="1" data-name="Fielding Independent Pitching" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">FIP</th>
+         <th scope="col" data-filter="1" data-name="Walks &amp; Hits per IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">WHIP</th>
+         <th scope="col" data-filter="1" data-name="Hits per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">H9</th>
+         <th scope="col" data-filter="1" data-name="Home Runs per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">HR9</th>
+         <th scope="col" data-filter="1" data-name="Bases On Balls per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">BB9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts per 9 IP" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO9</th>
+         <th scope="col" data-filter="1" data-name="Strikeouts / Base On Balls" style="background-color: #ddd; border: 1px solid #aaa; padding: 2px;">SO/W</th>
+      </tr>
+      </thead>
+<tbody>
+<tr><th scope="row" csk="2023" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2023</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">30</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/NYY/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="New York Yankees">NYY</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">.273</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6.85</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">14</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">14</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">64.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">65</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">51</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">49</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">15</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">28</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">64</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">286</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">63</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">5.79</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.446</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">3.9</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">9.0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.29</td></tr>
+</tbody><tfoot>
+   </tfoot>
+</table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/r/rodonca01.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 11/19/2023.</div>
 
 </td>
 </tr>
