--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -25,10 +25,18 @@
   <hr>
   <table>
 
+    <tr>
+      <h3><strong>2024 Season</strong></h3>
+    </tr>
+    
   <tr>
       <td><em>11/19/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Alex Cobb</strong> to the <u>Fresno Blaze</u> in exchange for <strong>P Carlos Rodon</strong> and the <strong>Fresno Blaze 5th round draft pick</strong>. </td>
     </tr>  
+
+<tr>
+  <h3><strong>2023 Season</strong></h3>
+</tr>
     
   <tr>
       <td><em>6/29/2023</em></td>
