--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -26,7 +26,7 @@
   <table>
 
     <tr>
-      <h3><strong>2024 Season</strong></h3>
+    <td><h3><strong>2024 Season</strong></h3></td> 
     </tr>
     
   <tr>
@@ -35,7 +35,7 @@
     </tr>  
 
 <tr>
-  <h3><strong>2023 Season</strong></h3>
+ <td> <h3><strong>2023 Season</strong></h3></td>
 </tr>
     
   <tr>
